[project]
name = "agent-social-media"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai-tools",
    "crewai>=0.100.0",
    "flask>=3.1.0",
    "requests>=2.32.3",
    "pillow>=11.1.0",
    "evolutionapi>=0.0.9",
    "pilgram>=1.2.1",
    "imgurpython>=1.1.7",
]


